@@ -59,6 +59,21 @@ lvconvert \- convert a logical volume from linear to mirror or snapshot
 .RB [ \-\-version ]
 .IR LogicalVolume [ Path ]...
 .sp
+.B lvconvert \-\-thinpool
+.IR ThinPoolLogicalVolume { Name | Path }
+.RB [ \-c | \-\-chunksize
+.IR ChunkSize ]
+.RB [[ \-\-poolmetadatasize
+.IR MetadataSize [ bBsSkKmMgG ]
+.RI [ PhysicalVolume [ Path ][ :PE [ -PE ]]...]]
+|
+.IR ThinMetadataLogicalVolume { Name | Path }]
+.RB [ \-Z | \-\-zero
+.RI { y | n }]
+.RB [ \-h | \-? | \-\-help ]
+.RB [ \-v | \-\-verbose ]
+.RB [ \-\-version ]
+.sp
 .B lvconvert \-\-repair
 .RB [ \-h | \-? | \-\-help ]
 .RB [ \-v | \-\-verbose ]
